RESOLVED FIXED240832
REGRESSION (r292532): pge.com: Unable to focus on any of the inputs
https://bugs.webkit.org/show_bug.cgi?id=240832
Summary REGRESSION (r292532): pge.com: Unable to focus on any of the inputs
alan
Reported 2022-05-23 15:18:11 PDT
Attachments
Patch (5.49 KB, patch)
2022-05-23 16:21 PDT, alan
no flags
Patch (5.49 KB, patch)
2022-05-23 16:22 PDT, alan
no flags
Patch (8.98 KB, patch)
2022-05-24 08:15 PDT, alan
no flags
alan
Comment 1 2022-05-23 16:21:14 PDT
alan
Comment 2 2022-05-23 16:22:39 PDT
alan
Comment 3 2022-05-24 08:15:50 PDT
EWS
Comment 4 2022-05-24 11:48:38 PDT
Committed r294754 (250922@main): <https://commits.webkit.org/250922@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459725 [details].
Note You need to log in before you can comment on or make changes to this bug.